Fixing spacing issue on member edit page

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1106,7 +1106,7 @@ dl#initialized_member {
 dl#initialized_member dt {
   float: left;
   margin-right: .5em;
-  width: 10em;
+  width: 11em;
   margin-right: 1em;
   text-align: right;
   font-weight: bold;
